--- a/projet-p/nav-bar-css.css
+++ b/projet-p/nav-bar-css.css
@@ -13,7 +13,8 @@ body {margin-right: 0px;
     background-position: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-nav {
+nav {position: fixed;
+    top: 0;
     margin-top: 0;
     height: 80px;
     width: 100%;
@@ -43,7 +44,7 @@ nav ul li a {
 
 nav a:hover,a.active {
     color: #fff;
-    background-color: #614972;
+    background-color: #624972;
     transition: 0.5s;
     text-transform: uppercase;
 }
@@ -58,6 +59,7 @@ nav li:first-child {
     margin-right: auto;
 }
 .sidebar{
+    z-index: 10000;
     position: fixed;
     top: 0;
     right: 0;
@@ -91,6 +93,12 @@ nav li:first-child {
     .menu-button {
         display: block;
     }
+    .logo img {
+       width: 150px;
+       height: auto;
+       padding-left: 20px;
+       padding-top: 30px;
+   }
 }
 @media(max-width: 400px) {
     .sidebar {
