--- a/sing in page/staylr.css
+++ b/sing in page/staylr.css
@@ -1,16 +1,19 @@
+
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     text-decoration: none;
-        list-style: none;
+    list-style: none;
 }
-body{
+
+body {
     min-height: 100vh;
-    background:radial-gradient(circle,#eae0fd, #ffffff);
+    background: radial-gradient(circle, #d6c8fb, #ffffff);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,13 +25,13 @@ body{
 
 nav {
 
-position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     margin-top: 0;
     height: 80px;
     width: 100%;
-background-color: #fff;
+    background-color: #fff;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
 
 }
@@ -41,7 +44,7 @@ nav ul {
 }
 
 nav ul li {
-    
+
     display: inline-block;
     line-height: 80px;
     margin: 0 5px;
@@ -50,7 +53,7 @@ nav ul li {
 }
 
 nav ul li a {
-   
+
     color: #624972;
     font-size: 16px;
     padding: 7px 13px;
@@ -58,7 +61,14 @@ nav ul li a {
     text-transform: uppercase;
 }
 
-nav a:hover,a.active {
+nav a:hover {
+    color: #fff;
+    background-color: #614972;
+    transition: 0.5s;
+    text-transform: uppercase;
+}
+
+nav.active {
     color: #fff;
     background-color: #614972;
     transition: 0.5s;
@@ -118,12 +128,13 @@ nav li:first-child {
     .menu-button {
         display: block;
     }
-         .logo img {
-             width: 150px;
-             height: auto;
-             padding-left: 20px;
-             padding-top: 30px;
-         }
+
+    .logo img {
+        width: 150px;
+        height: auto;
+        padding-left: 20px;
+        padding-top: 30px;
+    }
 }
 
 @media(max-width: 400px) {
@@ -132,8 +143,9 @@ nav li:first-child {
     }
 }
 
-
-.container{
+.container {
+    margin-top: 70px;
+    height: 500px;
     background-color: #fff;
     border-radius: 30px;
     box-shadow: 0 5px 15px rgba(62, 9, 75, 0.35);
@@ -141,12 +153,12 @@ nav li:first-child {
     overflow: hidden;
     width: 90%;
     max-width: 768px;
-    min-height: 440px;
-    width: min(100%,950px); 
-     /*for small screen*/    
+        min-height: 440px;
+        width: min(100%, 950px);
+    /*for small screen*/
 }
 
-.container p{
+.container p {
     font-size: 14px;
     line-height: 20px;
     letter-spacing: 0.3px;
@@ -154,15 +166,17 @@ nav li:first-child {
 }
 
 
-.container span{
+.container span {
     font-size: 12px;
 }
-.container a{
+
+.container a {
     color: #333;
     font-size: 15px;
     text-decoration: none;
     margin: 15px 0 10px;
 }
+
 .container button {
     background-color: #fff;
     color: #9290C3;
@@ -178,33 +192,55 @@ nav li:first-child {
 
 }
 
-.container button.hidden{
+.container button.hidden {
     color: #9290C3;
-    background-color:#fff;
-   
+    background-color: #fff;
+
 }
-.hidden:hover{
-    box-shadow: 0 0 5px #ffffff, 0 0 30px #c3b3e1,0 0 90px #7f46e9;
+
+.hidden:hover {
+    box-shadow: 0 0 5px #ffffff, 0 0 30px #c3b3e1, 0 0 90px #7f46e9;
     transition: 0.5s ease-in-out;
 }
 
-.hiddenn:hover{
-    
-    box-shadow: 0 0 5px #a34eca, 0 0 15px #a1a7ee, 0 0 29px #bdbed7,0 0 150px #b858e4;
+.hiddenn:hover {
+
+    box-shadow: 0 0 5px #a34eca, 0 0 15px #a1a7ee, 0 0 29px #bdbed7, 0 0 150px #b858e4;
     transition: 0.5s ease-in-out;
 }
-.container form{
+
+.container form {
     background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     padding: 0 40px;
-    height:100% ;
+    height: 100%;
 
 }
 
-.container input{
+.container label {
+    font-size: small;
+}
+
+.container select {
+    background-color: #eee;
+    border: 2px solid #9fa9c5;
+    margin: 8px 0;
+    padding: 5px 5px;
+    font-size: 13px;
+    border-radius: 30px;
+    width: 25%;
+    outline: none;
+    color: #6e6c71;
+    text-align: center;
+
+
+}
+
+.container input {
+    color: #6e6c71;
     background-color: #eee;
     border: 2px solid #9fa9c5;
     margin: 8px 0;
@@ -219,51 +255,58 @@ nav li:first-child {
     -o-border-radius: 30px;
 }
 
-.form-container{
-    position:absolute;
+.form-container {
+    position: absolute;
     top: 0;
     height: 100%;
     transition: all 0.6s ease-in-out;
 }
 
-.sign-in{
+.sign-in {
     left: 0;
     width: 50%;
     z-index: 2;
 }
 
-.container.active .sign-in{
+.container.active .sign-in {
     transform: translateX(100%);
-    
+
 }
-.sign-up{
+
+.sign-up {
     left: 0;
     width: 50%;
     opacity: 0;
     z-index: 1;
 }
 
-.container.active .sign-up{
+.container.active .sign-up {
     transform: translateX(100%);
     opacity: 1;
     z-index: 5;
     animation: move 0.6s;
 }
-@keyframes move{
-    0%, 49.99%{
+
+@keyframes move {
+
+    0%,
+    49.99% {
         opacity: 0;
         z-index: 1;
     }
-    50%, 100%{
+
+    50%,
+    100% {
         opacity: 1;
         z-index: 5;
     }
 }
 
-.social-icons{
+.social-icons {
     margin: 20px 0;
 }
-.social-icons a{
+
+.social-icons a {
     border: 1px solid #ccc;
     border-radius: 20%;
     display: inline-flex;
@@ -272,11 +315,12 @@ nav li:first-child {
     margin: 0 3px;
     width: 40px;
     height: 40px;
-    
+
 }
-.icon:hover{
-        box-shadow: 0 0 5px #a34eca, 0 0 15px #9b8db1, 0 0 29px #c6bdd7, 0 0 150px #8258e4;
-        transition: 0.5s ease-in-out;
+
+.icon:hover {
+    box-shadow: 0 0 5px #a34eca, 0 0 15px #9b8db1, 0 0 29px #c6bdd7, 0 0 150px #8258e4;
+    transition: 0.5s ease-in-out;
 
 }
 
@@ -289,16 +333,18 @@ nav li:first-child {
     overflow: hidden;
     transition: all 0.6s ease-in-out;
     border-radius: 150px 0 0 100px;
-    z-index: 1000; /* la transition de sin in to sing up*/
+    z-index: 1000;
+    /* la transition de sin in to sing up*/
 }
 
 
-       
 
 
-.container.active .toggel-container{
+
+.container.active .toggel-container {
     transform: translateX(-100%);
-    border-radius: 0 150px 100px 0;}
+    border-radius: 0 150px 100px 0;
+}
 
 .toggel {
     height: 100%;
@@ -308,35 +354,38 @@ nav li:first-child {
     left: -100%;
     height: 100%;
     width: 200%;
-    transform: translateX(0) ;
+    transform: translateX(0);
     transition: all 0.6s ease-in-out;
 }
-.container.container.active .toggel{
+
+.container.container.active .toggel {
     transform: translateX(50%);
 }
-.toggle-panel{
-   position: absolute;
-   width: 50%;
-   height: 100%;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   flex-direction: column;
-   padding: 0 30px;
-   text-align: center;
-   top: 0;
-   transform: translateX(0);
-   transition: all 0.6s ease-in-out;
+
+.toggle-panel {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 30px;
+    text-align: center;
+    top: 0;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
 }
-.toggle-left{
+
+.toggle-left {
     transform: translateX(-200%);
 }
 
-.container.active .toggle-left{
+.container.active .toggle-left {
     transform: translateX(0);
 }
 
-.toggle-right{
+.toggle-right {
     right: 0;
     transform: translateX(0);
 }
@@ -346,34 +395,64 @@ nav li:first-child {
 }
 
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .container {
+        margin-top: 70px;
+            height: 700px;
         padding: 10px 0px;
         font-size: small;
         width: 90%;
         max-width: 90%;
         height: 40px;
-        margin-top: 10px;
+        margin-top: 50px;
     }
-    .form-container{
-        font-size: small;
-        width:50% ;
-            margin-top: 40px;
-            height: auto;
+    
+
+    .form-container {
+
+        font-size: 10px;
+        width: 50%;
+        margin-top: 0px;
+        height: auto;
         display: block;
         text-align: center;
-    
+
     }
-        .form-container a{
-            font-size: small;
-        }
-        .social-icons{
+
+    .form-container a {
+        font-size: small;
+    }
+        
+
+    .social-icons {
         margin-top: 20px;
         margin-bottom: 20px;
+    }
+
+    .social-icons a {
+        margin: 0;
+        width: 20px;
+        height: 20px;
+    }
+        .container input {
+            color: #6e6c71;
+            background-color: #eee;
+            border: 2px solid #9fa9c5;
+            margin: 8px 0;
+            padding: 5px 15px;
+            font-size: 10px;
+            border-radius: 30px;
+            width: 100%;
+            outline: none;
         }
-        .social-icons a{
-            margin: 0 ;
-            width: 20px;
-            height: 20px;
-        }
+
+    .container button {
+        background-color: #fff;
+        color: #9290C3;
+        font-size: 10px;
+        padding: 5px 15px;
+        margin-top: 0px;
+
+
+    }
 }
