--- a/admin.css
+++ b/admin.css
@@ -110,7 +110,7 @@ html, body {
 .main-content {
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 2vw;
     background-color: #fff;
     border-radius: 0px;
     background: linear-gradient(to right , #7e6fd543, #e9b9f337 50%, #e9b9f337 50%, #898be570);
@@ -165,7 +165,7 @@ html, body {
 }
 
 .request-details p {
-    margin-left: 90px ; /* Right margin for date of registration */
+    margin-left: 90px ; 
 }
 
 .request-details h2, .request-details p {
@@ -180,11 +180,30 @@ html, body {
     align-items: center;
 }
 
-.right-side img {
-    width: 80px;
-    height: 80px;
-    margin-bottom: 10px;
+
+.right-side img[src="computer0.gif"] {
+    width: 10vw; 
+    height: auto; 
+    margin-bottom: 1vw; 
+    margin-left: 20vw;
+    
 }
+
+.right-side img[src="curved-arrow-with-broken-line (1).png"] {
+    width: 10vw; 
+    height: auto; 
+    margin-left: 5vw;
+
+}
+
+.right-side img[src="question0.gif"] {
+    width: 9vw; 
+    height: auto; 
+    margin-bottom: 1vw; 
+    margin-right: 14vw;
+    margin-top: -5vw;
+}
+
 
 .details-button {
     padding: 10px 20px;
@@ -200,6 +219,6 @@ html, body {
 }
 .svg-container {
     text-align: center;
-    margin-top: 35px; /* Adjust this value as needed to move the SVG lower */
-    margin-left: -33px;
+    margin-top: -8.5%; 
+    margin-left: -13.5%;
 }
