--- a/popup2.css
+++ b/popup2.css
@@ -21,6 +21,7 @@ body {
     text-align: center;
     opacity: 0;
     top: -200%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     transform: translate(-50%, -50%) scale(0.5);
     transition: opacity 300ms ease-in-out, top 1000ms ease-in-out, transform 1000ms ease-in-out;
   }
@@ -78,6 +79,8 @@ body {
     border-radius: 15px;
     cursor: pointer;
     transition: all 300ms ease-in-out;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+
   }
   
   .popup .buttons button:hover {
