--- a/teachers section/style.css
+++ b/teachers section/style.css
@@ -136,13 +136,14 @@ nav li:first-child {
    margin-bottom: 0px;
 }
 h1 {
-    padding-left: 60px;
+    padding-left: 2vw;
     color: #1b1022;
     font-size: 45px;
     font-family: 'Times New Roman', Times, serif;
+    margin-top: -2vw;
 }
 p {
-    padding-left: 70px;
+    padding-left: 2.5vw;
     color: #6e566e;
     font-size: 15px;
 }
@@ -244,12 +245,12 @@ svg{
     border: none;
     margin-top: auto;
     margin-bottom: -21.678px;
-   
+    margin-bottom: -1.085%;
 
 }
 .footer {
     border:none;
-    height: 300px;
+    height: 23vw;
     padding: 20px;
     background: linear-gradient(to right,#c0c0ce,#adadcc);
 }
@@ -286,12 +287,15 @@ svg{
  .divs-c-s img {
      margin-top: 1px;
      margin-bottom: 1px;
-     height: 100px;
-     width: 150px;
+     margin-left: 30%;
+    height: 10vw;
+    width: 20vw;
  }
 
  .divs-c-s h4 {
      color: #070F2B;
+     margin-left: 22%;
+
  }
 
  footer div {
@@ -337,6 +341,9 @@ svg{
      -moz-border-radius: 23px;
      -ms-border-radius: 23px;
      -o-border-radius: 23px;
+     margin-left: 22%;
+
+
 }
 
  .button-footer:hover {
