--- a/popup.css
+++ b/popup.css
@@ -21,6 +21,8 @@ body {
   text-align:center;
   opacity:0;
   top:-200%;
+  
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
   transform:translate(-50%,-50%) scale(0.5);
   transition: opacity 300ms ease-in-out,
               top 1000ms ease-in-out,
