new and updates!!!! work on these files please

--- a/nav-bar-css.css
+++ b/nav-bar-css.css
@@ -19,45 +19,50 @@ nav {
     width: 100%;
     background-color: white;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+
 }
+
 nav ul {
-    float: right;
-    margin-right: 20px;
-   
+    display: flex;
+    align-items: center;
 }
 
 nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-    
+    margin: 0 10px;
 }
 
 nav ul li a {
-    color: #1B1A55;
+    color: #614972;
     font-size: 16px;
     padding: 7px 13px;
-    border-radius: 5px;
+    border-radius: 15px;
     text-transform: uppercase;
 }
 
-nav a:hover,a.active {
+nav a:hover, a.active {
     color: #fff;
     background-color: #614972;
     transition: 0.5s;
     text-transform: uppercase;
 }
-.logo img {
-    size: 100px;
-    width: 220px;
-    height: auto;
-    padding-left: 50px;
 
+label.logo {
+    color: #90799f;
+    font-size: 30px;
+    font-weight: bold;
 }
-nav li:first-child {
-    margin-right: auto;
+
+.logo img {
+    width: 190px;
+    height: auto;
+    padding-top: 12px;
 }
-.sidebar{
+
+.sidebar {
     position: fixed;
     top: 0;
     right: 0;
@@ -72,18 +77,24 @@ nav li:first-child {
     align-items: flex-start;
     justify-content: flex-start;
 }
-.sidebar li {
-    width: 100%;
-}
-.sidebar a {
+
+.sidebar ul {
     width: 100%;
 }
 
+.sidebar a {
+    width: 100%;
+    color: #fff;
+    font-size: 18px;
+    padding: 15px 20px;
+    box-sizing: border-box;
+}
 
 .menu-button {
     display: none;
 }
-@media(max-width: 800px) {
+
+@media (max-width: 800px) {
     .hideOnMobile {
         display: none;
     }
@@ -91,8 +102,17 @@ nav li:first-child {
     .menu-button {
         display: block;
     }
+
+    nav ul {
+        display: none;
+    }
+
+    .sidebar {
+        display: flex;
+    }
 }
-@media(max-width: 400px) {
+
+@media (max-width: 400px) {
     .sidebar {
         width: 100%;
     }
@@ -461,3 +481,37 @@ margin-left: 20px;
 margin-top: 20px;
 padding-bottom: 5px;
 }
+#profile-picture {
+    width: 32px;
+    height: 30px; 
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 10px;
+    text-decoration: none;
+    display: block;
+    border-radius: 0;
+    transition: background-color 0.2s ease;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+    
+}
+
+
