--- a/projet-p/schedule.css
+++ b/projet-p/schedule.css
@@ -37,7 +37,7 @@ nav ul li a {
     color: #614972;
     font-size: 16px;
     padding: 7px 13px;
-    border-radius: 5px;
+    border-radius: 15px;
     text-transform: uppercase;
 }
 
@@ -52,7 +52,8 @@ nav a:hover,a.active {
     size: 100px;
     width: 220px;
     height: auto;
-    padding-left: 50px;
+    padding-left: 3vw;
+    margin-top: 1vw;
 
 }
 nav li:first-child {
