--- a/signin/index.ejs
+++ b/signin/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login page / animated</title>
-    <link rel="stylesheet" href="sign.css" />
+    <link rel="stylesheet" href="/signin/sign.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -23,7 +23,7 @@
       </ul>
     </nav>
     <nav>
-      <label class="logo"><img src="edulink3.png" alt="" /></label>
+      <label class="logo"><img src="/signin/edulink3.png" alt="" /></label>
       <ul>
         <li><a class="hideOnMobile"  href="#">HOME</a></li>
         <li><a class="hideOnMobile" href="#">about</a></li>
@@ -37,7 +37,7 @@
  
     <div class="container" id="container">
       <div class="form-container sign-up">
-        <form id="signup-form">
+        <form id="signup-form" action="/student/register" method="POST">
           <h1>Creat Account</h1>
           <div class="social-icons">
             <a href="" class="icon"><i class="fa-brands fa-google"></i></a>
@@ -48,7 +48,7 @@
 
           <input type="text" placeholder="Name" id="name" name="name" pattern="[A-Za-z ]+" title="Please enter only alphabetic characters" maxlength="50" required />
           <input type="email" placeholder="Email"  id="email" name="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" title="Please enter a valid email address" required/>
-          <input type="password" placeholder="Password" required/>
+          <input type="password" placeholder="Password"  id="password_signup" name="password" required/>
           <input type="date"  id="birthdate" name="birthdate" pattern="" required/>
           <label for="gender">Gender:</label>
           <select id="gender" name="gender" required>
@@ -63,7 +63,8 @@
       </div>
 
       <div class="form-container sign-in">
-        <form id="login-form">
+        <form id="login-form" action="/student/login" method="POST">
+          
           <h1>Log In</h1>
           <div class="social-icons">
             <a href=" " class="icon"><i class="fa-brands fa-google"></i></a>
@@ -72,8 +73,8 @@
           </div>
           <span> use your e-mail </span>
 
-          <input type="email" placeholder="Email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" title="Please enter a valid email address" required/>
-          <input type="password" placeholder="Password" />
+          <input type="email"  name="email" placeholder="Email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" title="Please enter a valid email address" required/>
+          <input type="password" placeholder="Password"  id="password_login" name="password" required/>
           <a href=" ">Forget your Password?</a>
           <button type="submit" class="hiddenn">Log In ></button>
         </form>
@@ -98,7 +99,7 @@
       </div>
     </div>
   
-    <script src="script.js">
+    <script src="/signin/script.js">
 
   const signupForm = document.getElementById('signup-form');
   const loginForm = document.getElementById('login-form');
@@ -108,10 +109,10 @@
   signupForm.addEventListener('submit', function(event) {
     event.preventDefault();
     const formData = new FormData(this);// Automatically collects data from all form fields
-
+    formData.append('password', this.querySelector('#password_signup').value)
     // Perform the fetch request with the FormData object containing all input values:
 
-    fetch('/student/register', {
+    fetch('https://localhost:3000/student/register', {
       method: 'POST',
       body: formData
     })
@@ -129,7 +130,8 @@
   loginForm.addEventListener('submit', function(event) {
     event.preventDefault();
     const formData = new FormData(this);  // Collect data from all inputs in the form
-    fetch('/student/login', {
+    formData.append('password', this.querySelector('#password_login').value)
+    fetch('https://localhost:3000/student/login', {
       method: 'POST',
       body: formData
     })
@@ -140,12 +142,6 @@
     })
     .catch(error => console.error('Error:', error));
   });
-
-     
-
-
-
-
     </script>
   </body>
 </html>
